# tinyvla

./: .gitignore  .gitmodules  README.md  config.yaml  eval.py  pyproject.toml  requirements.txt  setup.sh  tinyvla.py  train.py
docs/: CHANGES.md  CONFIGURATION.md  TRAINING_STATUS.md
